--- a/package.json
+++ b/package.json
@@ -27,15 +27,22 @@
     "@angular-devkit/build-angular": "^18.2.0",
     "@angular/cli": "^18.2.0",
     "@angular/compiler-cli": "^18.2.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/chrome": "^0.0.270",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
     "typescript": "~5.5.2",
     "webpack-ext-reloader": "^1.1.13"
+  },
+  "resolutions": {
+    "wrap-ansi": "^7.0.0"
   }
 }
