--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
   "name": "chrome-tabs-rotator",
   "version": "1.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "start": "ng build --watch --configuration development",
+    "build": "ng build && node zip.js"
   },
   "private": true,
   "dependencies": {
@@ -32,6 +29,7 @@
     "@types/chrome": "^0.0.270",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
+    "archiver": "^7.0.1",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
@@ -42,7 +40,8 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "typescript": "~5.5.2",
-    "webpack-ext-reloader": "^1.1.13"
+    "webpack-ext-reloader": "^1.1.13",
+    "xbytes": "^1.9.1"
   },
   "resolutions": {
     "wrap-ansi": "^7.0.0"
