Added import local config from file

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,7 +8,7 @@
   },
   "files": [
     "src/main.ts",
-    "src/background.ts"
+    "src/background/background.ts"
   ],
   "include": [
     "src/**/*.d.ts"
