Added pages refresh in new tabs

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "allowedCommonJsDependencies": [
-              "file-saver"
+              "file-saver",
+              "lodash"
             ],
             "assets": [
               "src/favicon.ico",
