--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,9 +2,12 @@
   "manifest_version": 3,
   "name": "Tabs Rotator / Slideshow",
   "short_name": "Tabs Rotator",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Rotate through a set of URLs at specified intervals.",
-  "permissions": ["tabs", "storage", "activeTab", "webNavigation"],
+  "permissions": ["tabs", "storage", "activeTab", "webNavigation", "scripting"],
+  "host_permissions": [
+        "*://*/*"
+    ],
   "background": {
     "service_worker": "background.js",
     "type": "module"
